# statefs-providers

./: .gitignore  CMakeLists.txt  README
bluez/src/: .gitignore  CMakeLists.txt  bluez.cpp  bluez.hpp  common.h  provider.cpp
doc/: Doxyfile
include/cor/: udev.hpp
include/statefs/qt/: dbus.hpp  ns.hpp  util.hpp
inout/: CMakeLists.txt  inout-bluetooth.conf  inout-cellular.conf  inout-location.conf  inout-mce.conf  inout-network.conf  inout-profile.conf  inout-reader.cpp  inout-writer.cpp  inout_cellular.conf  inout_keyboard.conf  inout_location.conf  inout_power.conf  statefs-inout-example.conf
rpm/: README  default-install.spec.tpl  default_system-providers.spec.tpl  generate-spec.py  inout-install.spec.tpl  inout_system-providers.spec.tpl  inout_user-providers.spec.tpl  qt5-install.spec.tpl  qt5_system-providers.spec.tpl  qt5_user-providers.spec.tpl  statefs-providers.spec  statefs-providers.spec.tpl  statefs-qt5-examples.spec
src/back_cover/: CMakeLists.txt  provider_back_cover.cpp
src/bluez/: CMakeLists.txt  bluez.cpp  bluez.hpp  common.h  org.bluez.Adapter.xml  org.bluez.Device.xml  org.bluez.Manager.xml  org.bluez.all.xml  provider_bluez.cpp  provider_bluez.hpp
src/bme/: CMakeLists.txt  bmeipc.c  bmeipc.h  provider_bme.cpp  provider_bme.hpp
src/connman/: CMakeLists.txt  dbus_types.hpp  net.connman.manager.xml  net.connman.notification.xml  net.connman.service.xml  net.connman.session.xml  provider_connman.cpp  provider_connman.hpp
src/keyboard-generic/: CMakeLists.txt  provider_keyboard-generic.cpp  provider_keyboard-generic.hpp
src/keyboard_generic/: CMakeLists.txt  provider_keyboard_generic.cpp
src/mce/: CMakeLists.txt  mce.xml  provider_mce.cpp  provider_mce.hpp
src/ofono/: CMakeLists.txt  dbus_types.hpp  org.ofono.connectionmanager.xml  org.ofono.manager.xml  org.ofono.networkregistration.xml  org.ofono.simmanager.xml  provider_ofono.cpp  provider_ofono.hpp
src/profile/: CMakeLists.txt  dbus_types.hpp  profiled.xml  provider_profile.cpp  provider_profile.hpp
src/udev/: CMakeLists.txt  provider_udev.cpp
src/upower/: CMakeLists.txt  provider_upower.cpp  provider_upower.hpp  upower.cpp  upower.hpp
src/util/: CMakeLists.txt  ns.cpp  statefs-providers-qt5.pc.in  util.cpp  util_p.hpp
tests/: .gitignore  CMakeLists.txt  common.hpp  provider-bme-main.cpp  provider-upower-m2.cpp  statefs-providers-qt5-m2.cpp  statefs-qt5-main.cpp
